# mod37_1

./: CMakeLists.txt  calc.cpp  calc.h  main.cpp
include/: calc.h
src/: calc.cpp  calc.ui  main.cpp
